# Pass

./: .clang-format  .gitattributes  .gitignore  AUDITORIA-SEGURIDAD.md  CMakeLists.txt  CMakePresets.json  README.md  estructura.md  tasks.md
.claude/skills/pruebas-concurrencia-sync/: SKILL.md
.claude/skills/run-pass/: SKILL.md  smoke.ps1
app/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp  resources.qrc
app/models/: SessionTableModel.cpp  SessionTableModel.h
app/theme/: DotIcon.cpp  DotIcon.h  Theme.cpp  Theme.h  theme.qss
app/util/: SessionPlanner.cpp  SessionPlanner.h  SubjectUtil.cpp  SubjectUtil.h
app/views/: CalendarView.cpp  CalendarView.h  DashboardView.cpp  DashboardView.h  NotesView.cpp  NotesView.h  SettingsView.cpp  SettingsView.h  StatsView.cpp  StatsView.h  StudyView.cpp  StudyView.h  SubjectAdminView.cpp  SubjectAdminView.h
app/widgets/: ActivityCalendarWidget.cpp  ActivityCalendarWidget.h  EventDialog.cpp  EventDialog.h  GoogleCredentialsDialog.cpp  GoogleCredentialsDialog.h  NewNoteDialog.cpp  NewNoteDialog.h  ScanlineOverlay.cpp  ScanlineOverlay.h  SessionSetupDialog.cpp  SessionSetupDialog.h  TimerWidget.cpp  TimerWidget.h
core/: CMakeLists.txt
core/include/pass/: Version.h
core/include/pass/admin/: SubjectAdminService.h
core/include/pass/calendar/: CalendarProvider.h  CalendarService.h  LocalCalendarProvider.h
core/include/pass/command/: CommandId.h  CommandParser.h  CommandProcessor.h  CommandTypes.h
core/include/pass/db/: Database.h  Migrations.h
core/include/pass/domain/: CalendarEvent.h  Note.h  PomodoroStrategy.h  StudySession.h  Subject.h  Topic.h
core/include/pass/google/: CalendarClient.h  GoogleAuthService.h  GoogleCalendarClient.h  GoogleEventMapper.h  GoogleSyncService.h  TokenStore.h  WinCredTokenStore.h
core/include/pass/notes/: NoteSerializer.h  VaultService.h  VaultWatcher.h
core/include/pass/repo/: EventRepository.h  SessionRepository.h  StrategyRepository.h  SubjectRepository.h  SyncStateRepository.h  TopicRepository.h
core/include/pass/session/: SessionTimerService.h  StrategyCatalog.h
core/include/pass/settings/: AppSettings.h
core/include/pass/stats/: StatsService.h
core/include/pass/sync/: DataChangeNotifier.h  GitRunner.h  GitSyncController.h  GitSyncService.h  SyncExporter.h  SyncImporter.h  SyncSerializer.h  Tombstones.h
core/src/: Version.cpp
core/src/admin/: SubjectAdminService.cpp
core/src/calendar/: CalendarService.cpp  LocalCalendarProvider.cpp
core/src/command/: CommandId.cpp  CommandParser.cpp  CommandProcessor.cpp
core/src/db/: Database.cpp  Migrations.cpp
core/src/domain/: StudySession.cpp
core/src/google/: GoogleAuthService.cpp  GoogleCalendarClient.cpp  GoogleEventMapper.cpp  GoogleSyncService.cpp  WinCredTokenStore.cpp
core/src/notes/: NoteSerializer.cpp  VaultService.cpp  VaultWatcher.cpp
core/src/repo/: EventRepository.cpp  SessionRepository.cpp  StrategyRepository.cpp  SubjectRepository.cpp  SyncStateRepository.cpp  TopicRepository.cpp
core/src/session/: SessionTimerService.cpp  StrategyCatalog.cpp
core/src/settings/: AppSettings.cpp
core/src/stats/: StatsService.cpp
core/src/sync/: DataChangeNotifier.cpp  GitRunner.cpp  GitSyncController.cpp  GitSyncService.cpp  SyncExporter.cpp  SyncImporter.cpp  SyncSerializer.cpp  Tombstones.cpp
docs/: PLAN_VISUAL_BRUTALIST.md  commands.md  github-sync.md  google-calendar.md  passport-integration.md  plan.md
scratch/: check_font.py  check_font_std.py  font_debug.txt  get_font_names.py
scripts/: deploy.ps1
tests/: CMakeLists.txt  tst_commandparser.cpp  tst_commandprocessor.cpp  tst_commands.cpp  tst_events.cpp  tst_gitrunner.cpp  tst_gitsynccontroller.cpp  tst_gitsyncservice.cpp  tst_googlemapper.cpp  tst_googlesync.cpp  tst_migrations.cpp  tst_noteserializer.cpp  tst_repositories.cpp  tst_smoke.cpp  tst_stats.cpp  tst_strategycatalog.cpp  tst_syncimportexport.cpp  tst_syncserializer.cpp  tst_timerservice.cpp  tst_tokenstore.cpp  tst_vaultservice.cpp  tst_vaultwatcher.cpp
