qt_add_executable(pass WIN32
    main.cpp
    MainWindow.h
    MainWindow.cpp
    views/StudyView.h
    views/StudyView.cpp
    views/StatsView.h
    views/StatsView.cpp
    views/CalendarView.h
    views/CalendarView.cpp
    views/NotesView.h
    views/NotesView.cpp
    views/DashboardView.h
    views/DashboardView.cpp
    views/SettingsView.h
    views/SettingsView.cpp
    views/SubjectAdminView.h
    views/SubjectAdminView.cpp
    widgets/EventDialog.h
    widgets/EventDialog.cpp
    widgets/GoogleCredentialsDialog.h
    widgets/GoogleCredentialsDialog.cpp
    widgets/ActivityCalendarWidget.h
    widgets/ActivityCalendarWidget.cpp
    models/SessionTableModel.h
    models/SessionTableModel.cpp
    widgets/SessionSetupDialog.h
    widgets/SessionSetupDialog.cpp
    widgets/NewNoteDialog.h
    widgets/NewNoteDialog.cpp
    widgets/TimerWidget.h
    widgets/TimerWidget.cpp
    util/SubjectUtil.h
    util/SubjectUtil.cpp
    util/SessionPlanner.h
    util/SessionPlanner.cpp
)

target_link_libraries(pass PRIVATE passcore Qt6::Widgets Qt6::Charts)
