# Los tests enlazan passcore SIN Qt6::Widgets: sirven también como test de humo
# de que el core se mantiene libre de dependencias de UI.
function(pass_add_test name)
    qt_add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE passcore Qt6::Test)
    add_test(NAME ${name} COMMAND ${name})
endfunction()

pass_add_test(tst_smoke)
pass_add_test(tst_migrations)
pass_add_test(tst_repositories)
pass_add_test(tst_strategycatalog)
pass_add_test(tst_timerservice)
pass_add_test(tst_stats)
pass_add_test(tst_events)
pass_add_test(tst_noteserializer)
pass_add_test(tst_vaultservice)
pass_add_test(tst_vaultwatcher)
pass_add_test(tst_googlemapper)
pass_add_test(tst_googlesync)
pass_add_test(tst_syncserializer)
pass_add_test(tst_syncimportexport)
pass_add_test(tst_gitrunner)
pass_add_test(tst_commandparser)
pass_add_test(tst_commandprocessor)
pass_add_test(tst_commands)
pass_add_test(tst_gitsyncservice)
pass_add_test(tst_gitsynccontroller)

# El almacén de tokens sobre el Administrador de credenciales es solo Windows.
if(WIN32)
    pass_add_test(tst_tokenstore)
endif()
